--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,28 +9,34 @@
   <link rel="stylesheet" href="style/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/687641562e.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-<img src="images/logo.png" alt="#" class="logo">
-<div class="main">
- <div class="left">
-   <img src="images/illustration-mockups.png" alt="#" class="ill">
- </div>
- <div class="right">
-   <h1>
-     <span class="l1">Build The Community</span>
-     <span class="l2">Your Fans Will Love</span>
-   </h1>
-   <P>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.</P>
-   <button>Register</button>
-   <div class="sm">
-     <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
-     <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
-     <div class="insta"><i class="fa-brands fa-instagram"></i></body>
+  <img src="images/logo.png" alt="#" class="logo">
+  <div class="main">
+    <div class="left">
+      <img src="images/illustration-mockups.png" alt="#" class="ill">
+    </div>
+    <div class="right">
+      <h1>
+        <span class="l1">Build The Community</span>
+        <span class="l2">Your Fans Will Love</span>
+      </h1>
+      <P>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create
+        connections with your users as you engage in genuine discussion.</P>
+      <button>Register</button>
+    </div>
   </div>
-  </div>
-</div>
+  <footer>
+    <div class="sm">
+      <div class="facebook"><i class="fa-brands fa-facebook-f"></i></div>
+      <div class="twitter"><i class="fa-brands fa-twitter"></i></div>
+      <div class="insta"><i class="fa-brands fa-instagram"></i></div>
+    </div>
+  </footer>
 </body>
+
 </html>
